fixed transcript position too close to controls

--- a/src/index.css
+++ b/src/index.css
@@ -65,9 +65,11 @@ html {
 	font-family: 'Ubuntu';
 	font-weight: 500;
 	font-size: 32px;
-	text-align: center;
+    display: flex;
 	width: 100%;
     height: 100px;
+    align-items: center;
+    justify-content: center;
 	color: white;
     margin: 200 0;
 }
